--- a/genesis-translations/sv_SE.po
+++ b/genesis-translations/sv_SE.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Genesis 1.8 package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2012-02-07 09:42:46+0000\n"
+"PO-Revision-Date: 2012-03-12 11:51:21+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -12,7 +12,7 @@ msgstr ""
 
 #: 404.php:33
 msgid "Not Found, Error 404"
-msgstr "Inte funnen, Error 404 "
+msgstr "Inte funnen, fel 404 "
 
 #: 404.php:35
 msgid "The page you are looking for no longer exists. Perhaps you can return back to the site's <a href=\"%s\">homepage</a> and see if you can find what you are looking for. Or, you can try finding it with the information below."
@@ -159,7 +159,7 @@ msgstr "Anpassad »Tracking/Conversion Code«"
 #: lib/admin/inpost-metaboxes.php:186 lib/admin/term-meta.php:202
 #: lib/admin/user-meta.php:219
 msgid "Layout Settings"
-msgstr ""
+msgstr "Layoutinställningar"
 
 #: lib/admin/inpost-metaboxes.php:210 lib/admin/term-meta.php:211
 #: lib/admin/user-meta.php:229
@@ -180,7 +180,7 @@ msgstr "README "
 
 #: lib/admin/readme-menu.php:68
 msgid "The %s file was not found in the child theme, or it was empty."
-msgstr ""
+msgstr "Filen %s hittades inte i undertemat, eller är tom."
 
 #: lib/admin/seo-settings.php:43
 msgid "Genesis - SEO Settings"
@@ -209,7 +209,7 @@ msgstr "Inställningar för återställning."
 #: lib/admin/seo-settings.php:54 lib/admin/theme-settings.php:68
 #: lib/classes/admin.php:108
 msgid "Error saving settings."
-msgstr ""
+msgstr "Misslyckades med att spara inställningar."
 
 #: lib/admin/seo-settings.php:172
 msgid "Doctitle Settings"
@@ -245,7 +245,7 @@ msgstr "Lägg webbplatsens namn till \"Doctitle\" på inre sidor?"
 
 #: lib/admin/seo-settings.php:208
 msgid "Doctitle (%s) Append Location:"
-msgstr ""
+msgstr "Doctitle (%s) Bifoga Plats:"
 
 #: lib/admin/seo-settings.php:209
 msgid "Determines what side the appended doctitle text will go on."
@@ -261,7 +261,7 @@ msgstr "Höger"
 
 #: lib/admin/seo-settings.php:221
 msgid "Doctitle (<code>&lt;title&gt;</code>) Separator:"
-msgstr ""
+msgstr "Doctitle (<code>&lt;title&gt;</code>) Separator:"
 
 #: lib/admin/seo-settings.php:223
 msgid "If the doctitle consists of two parts (Title &amp; Appended Text), then the Doctitle Separator will go between them."
@@ -289,7 +289,7 @@ msgstr "Varken eller. Jag vill manuellt styra min egen text på hemsidan"
 
 #: lib/admin/seo-settings.php:259
 msgid "Home Doctitle:"
-msgstr ""
+msgstr "Hem Doctitle:"
 
 #: lib/admin/seo-settings.php:261
 msgid "If you leave the doctitle field blank, your site&rsquo;s title will be used instead."
@@ -297,7 +297,7 @@ msgstr "Om du lämnar doctitle fältet tomt, så kommer webbplatsens titel anvä
 
 #: lib/admin/seo-settings.php:265
 msgid "Home META Description:"
-msgstr ""
+msgstr "Hem META Beskrivning"
 
 #: lib/admin/seo-settings.php:267
 msgid "The META Description can be used to determine the text used under the title on search engine results pages."
@@ -305,7 +305,7 @@ msgstr "META-beskrivningen kan användas för att bestämma den text som använd
 
 #: lib/admin/seo-settings.php:271
 msgid "Home META Keywords (comma separated):"
-msgstr ""
+msgstr "Hem META Nyckelord (kommaseparerade):"
 
 #: lib/admin/seo-settings.php:273
 msgid "Keywords are generally ignored by Search Engines."
@@ -330,7 +330,7 @@ msgstr "Förhållningssätt mellan Länkar och Taggar:"
 
 #: lib/admin/seo-settings.php:311
 msgid "Adjacent Posts %s link tags"
-msgstr ""
+msgstr "Angränsnade inläggs %s länktaggar"
 
 #: lib/admin/seo-settings.php:314
 msgid "Windows Live Writer Support:"
@@ -402,23 +402,23 @@ msgstr "Detta alternativ pekar sökmotorer på första sidan i ett arkiv, om du 
 
 #: lib/admin/term-meta.php:55
 msgid "Archive Settings"
-msgstr ""
+msgstr "Inställningar för Arkiv"
 
 #: lib/admin/term-meta.php:59
 msgid "Archive Headline"
-msgstr ""
+msgstr "Rubrik för arkiv"
 
 #: lib/admin/term-meta.php:62
 msgid "Leave empty if you do not want to display a headline."
-msgstr ""
+msgstr "Lämna tom om du inte vill visa någon rubrik."
 
 #: lib/admin/term-meta.php:66
 msgid "Archive Intro Text"
-msgstr ""
+msgstr "Introduktionstext för arkiv"
 
 #: lib/admin/term-meta.php:69
 msgid "Leave empty if you do not want to display any intro text."
-msgstr ""
+msgstr "Lämna tom om du inte vill visa någon introduktionstext."
 
 #: lib/admin/term-meta.php:123 lib/admin/user-meta.php:158
 msgid "Custom Document %s"
@@ -460,7 +460,7 @@ msgstr "Information"
 
 #: lib/admin/theme-settings.php:207
 msgid "Color Style"
-msgstr ""
+msgstr "Färgstil"
 
 #: lib/admin/theme-settings.php:209
 msgid "Custom Feeds"
@@ -532,7 +532,7 @@ msgstr "Om du anger din e-postadress ovan, får du e-post när en ny version av 
 
 #: lib/admin/theme-settings.php:308
 msgid "Color Style:"
-msgstr ""
+msgstr "Färgstil:"
 
 #: lib/admin/theme-settings.php:310
 msgid "Default"
@@ -540,7 +540,7 @@ msgstr "Standard"
 
 #: lib/admin/theme-settings.php:322
 msgid "Please select the color style from the drop down list and save your settings."
-msgstr ""
+msgstr "Välj färgstil från listan och spara dina inställningar."
 
 #: lib/admin/theme-settings.php:368
 msgid "Use for blog title/logo:"
@@ -672,7 +672,7 @@ msgstr "404 Sidan"
 
 #: lib/admin/theme-settings.php:564
 msgid "Attachment Page"
-msgstr ""
+msgstr "Sida för bilagor"
 
 #: lib/admin/theme-settings.php:567
 msgid "Breadcrumbs are a great way of letting your visitors find out where they are on your site with just a glance. You can enable/disable them on certain areas of your site."
@@ -748,15 +748,15 @@ msgstr "Kommaseparerad - 1,2,3 till exempel"
 
 #: lib/admin/theme-settings.php:669
 msgid "Number of Posts to Show:"
-msgstr ""
+msgstr "Antal inlägg att visa:"
 
 #: lib/admin/theme-settings.php:690 lib/admin/theme-settings.php:700
 msgid "Enter scripts or code you would like output to %s:"
-msgstr ""
+msgstr "Ange skript eller kod som du vill skriva ut i %s:"
 
 #: lib/admin/theme-settings.php:695 lib/admin/theme-settings.php:705
 msgid "The %1$s hook executes immediately before the closing %2$s tag in the document source."
-msgstr ""
+msgstr "Funktionen %1$s exekveras direkt innan taggen %2$s stängs i dokumentkällan."
 
 #: lib/admin/user-meta.php:40
 msgid "User Permissions"
@@ -780,7 +780,7 @@ msgstr "Aktivera Import / Export Undermeny?"
 
 #: lib/admin/user-meta.php:88
 msgid "Author Archive Settings"
-msgstr ""
+msgstr "Inställningar författararkiv"
 
 #: lib/admin/user-meta.php:89 lib/admin/user-meta.php:154
 #: lib/admin/user-meta.php:220
@@ -817,7 +817,7 @@ msgstr "Aktivera Författarerutan på den här användarens arkiv?"
 
 #: lib/classes/admin.php:118
 msgid "You cannot use %s to create two menus in the same subclass. Please use separate subclasses for each menu."
-msgstr ""
+msgstr "Du kan inte använda %s för att skapa två menyer i samma underklass. Använd separata underklasser för varje meny."
 
 #: lib/classes/admin.php:415 lib/classes/admin.php:424
 #: lib/classes/admin.php:527 lib/classes/admin.php:546
@@ -878,7 +878,7 @@ msgstr "Se alla objekt i %s"
 
 #: lib/functions/admin.php:15
 msgid "This file no longer needs to be included."
-msgstr ""
+msgstr "Filen behöver inte längre inkluderas."
 
 #: lib/functions/formatting.php:291
 msgid "seconds"
@@ -918,15 +918,15 @@ msgstr "Ingen etikett vald"
 
 #: lib/functions/menu.php:74
 msgid "The argument, \"context\", has been replaced with \"theme_location\" in the $args array."
-msgstr ""
+msgstr "Argumentet \"context\" har blivit ersatt med \"theme_location\" i $args matrisen."
 
 #: lib/functions/seo.php:118
 msgid "Have you tried our Scribe SEO software? Do keyword research, content optimization, and link building without leaving WordPress. <b>Genesis owners save over 50&#37; using the promo code FIRST when you sign up</b>. <a href=\"%s\" target=\"_blank\">Click here for more info</a>."
-msgstr ""
+msgstr "Har du testat Scribe, vår mjukvara för SEO? Undersök nyckelord, genomför innehållsoptimering och länkuppbyggnad, utan att lämna Wordpress. <b>Ägare av Genesis sparar mer än 50&#37; genom att använda rabattkoden FIRST när du registrerar dig</b>. <a href=\"%s\" target=\"_blank\">Klicka här för mer information</a>."
 
 #: lib/functions/seo.php:120
 msgid "Dismiss"
-msgstr ""
+msgstr "Avfärda"
 
 #: lib/functions/upgrade.php:376
 msgid "Congratulations! You are now rocking Genesis %s"
@@ -954,7 +954,7 @@ msgstr "Genesis%s är nu tillgänglig. Vi erbjuder uppdateringar med 1 klick fö
 
 #: lib/functions/widgetize.php:63
 msgid "Header Left"
-msgstr ""
+msgstr "Sidhuvud vänster"
 
 #: lib/functions/widgetize.php:63
 msgid "Header Right"
@@ -970,7 +970,7 @@ msgstr "Primär Sidebar"
 
 #: lib/functions/widgetize.php:72
 msgid "This is the primary sidebar if you are using a two or three column site layout option."
-msgstr ""
+msgstr "Detta är det primära sidofältet om du använder en sidlayout med två eller tre kolumner."
 
 #: lib/functions/widgetize.php:79
 msgid "Secondary Sidebar"
@@ -978,7 +978,7 @@ msgstr "Sekundär Sidebar"
 
 #: lib/functions/widgetize.php:80
 msgid "This is the secondary sidebar if you are using a three column site layout option."
-msgstr ""
+msgstr "Detta är det andra sidofältet om du använder en sidlayout med tre kolumner."
 
 #: lib/functions/widgetize.php:112
 msgid "Footer %d"
@@ -986,7 +986,7 @@ msgstr "Sidfot %d"
 
 #: lib/functions/widgetize.php:113
 msgid "Footer %d widget area."
-msgstr ""
+msgstr "Footer %d widgetområde."
 
 #: lib/js/load-scripts.php:86
 msgid "Select / Deselect All"
@@ -1409,7 +1409,7 @@ msgstr "Länktext"
 
 #: lib/widgets/latest-tweets-widget.php:49
 msgid "Display a list of your latest tweets."
-msgstr ""
+msgstr "Visa en lista med dina senaste twittringar."
 
 #: lib/widgets/latest-tweets-widget.php:58
 msgid "Genesis - Latest Tweets"
@@ -1490,7 +1490,7 @@ msgstr "Länktext (krävs)"
 #: lib/widgets/menu-categories-widget.php:42
 #: lib/widgets/menu-pages-widget.php:42
 msgid "This widget has been deprecated, and will eventually be removed. DO NOT use it. You have been warned."
-msgstr ""
+msgstr "Denna widget är föråldrad och kommer eventuellt att bli borttagen. Använd den INTE. Du har blivit varnad."
 
 #: lib/widgets/menu-categories-widget.php:45
 msgid "Genesis - Category Menu"
@@ -1503,7 +1503,7 @@ msgstr "Denna widget är inaktuell, och kommer så småningom att tas bort. Vi f
 
 #: lib/widgets/menu-pages-widget.php:51
 msgid "Genesis - Page Menu"
-msgstr ""
+msgstr "Genesis - Meny för sidor"
 
 #: lib/widgets/user-profile-widget.php:42
 msgid "[Read More %s]"
@@ -1555,7 +1555,7 @@ msgstr "Egen text (nedan)"
 
 #: lib/widgets/user-profile-widget.php:173
 msgid "Custom Text Content"
-msgstr ""
+msgstr "Anpassat textinnehåll"
 
 #: lib/widgets/user-profile-widget.php:179
 msgid "Choose your extended \"About Me\" page from the list below. This will be the page linked to at the end of the about me section."
@@ -1563,7 +1563,7 @@ msgstr "Välj din utökade \"Om mig\"-sida från listan nedan. Detta kommer bli 
 
 #: lib/widgets/user-profile-widget.php:184
 msgid "Extended page link text"
-msgstr ""
+msgstr "Utökad länktext för sidan"
 
 #: lib/widgets/user-profile-widget.php:190
 msgid "Show Author Archive Link?"
