--- a/genesis-translations/hu_HU.po
+++ b/genesis-translations/hu_HU.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Genesis 1.8 package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2012-03-12 11:59:13+0000\n"
+"PO-Revision-Date: 2012-06-21 12:53:07+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1490,20 +1490,20 @@ msgstr "Link szövege (kötelező)"
 #: lib/widgets/menu-categories-widget.php:42
 #: lib/widgets/menu-pages-widget.php:42
 msgid "This widget has been deprecated, and will eventually be removed. DO NOT use it. You have been warned."
-msgstr ""
+msgstr "Ez a widget már elavult, és el kell távolítani. Ne használja. Mi szóltunk..."
 
 #: lib/widgets/menu-categories-widget.php:45
 msgid "Genesis - Category Menu"
-msgstr ""
+msgstr "Genesis - Kategória menü"
 
 #: lib/widgets/menu-categories-widget.php:120
 #: lib/widgets/menu-pages-widget.php:126
 msgid "This widget has been deprecated, and will eventually be removed. We suggest that you <a href=\"%s\">create a menu</a> and use the \"Custom Menu\" widget instead."
-msgstr ""
+msgstr "Ez a widget már elavult, és el kell távolítani. Javasoljuk, inkabb használja a <a href=\"%s\">menü készítése</a> lehetőséget, és használja a \"Egyedi Menük\" widgetet."
 
 #: lib/widgets/menu-pages-widget.php:51
 msgid "Genesis - Page Menu"
-msgstr ""
+msgstr "Genesis - Oldal menü"
 
 #: lib/widgets/user-profile-widget.php:42
 msgid "[Read More %s]"
@@ -1555,7 +1555,7 @@ msgstr "Egyedi szöveg (alul)"
 
 #: lib/widgets/user-profile-widget.php:173
 msgid "Custom Text Content"
-msgstr ""
+msgstr "Egyedi szöveges tartalom"
 
 #: lib/widgets/user-profile-widget.php:179
 msgid "Choose your extended \"About Me\" page from the list below. This will be the page linked to at the end of the about me section."
@@ -1563,7 +1563,7 @@ msgstr "Válaszd ki a kibővített \"Rólam\" oldalt a listából! Erre az oldal
 
 #: lib/widgets/user-profile-widget.php:184
 msgid "Extended page link text"
-msgstr ""
+msgstr "Bővített oldal link szövege"
 
 #: lib/widgets/user-profile-widget.php:190
 msgid "Show Author Archive Link?"
